# tf-quant-finance

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheel.yml  calculate-coverage.yml  check-code-format.yml  create_new_tag_on_PR.yml  deploy-docs.yml  deploy-docs.yml.disabled  run-tests.yml  security-audit.yml
api_docs/: .readthedocs.yml  README.md
api_docs/tf_quant_finance/: _config.yml  _toc.yml  black_scholes.md  datetime.md  experimental.md  index.md  math.md  models.md  rates.md  types.md  utils.md
ci_build/: Dockerfile
ci_build/py310/: Dockerfile
ci_build/py312/: Dockerfile
ci_build/py313/: Dockerfile
requirements/: build.txt  docs.txt
scripts/: basedir.ps1  basedir.sh  build_docs.py  build_wheel.ps1  build_wheel.sh  compile_protos.py  create_venv.ps1  create_venv.sh  run_tests.ps1  run_tests.sh  sanity_checks.sh  security_audit.sh
tests/black_scholes/: asian_prices_test.py  brownian_bridge_test.py  crr_binomial_tree_test.py  implied_vol_approximation_test.py  implied_vol_lib_test.py  implied_vol_newton_root_test.py  vanilla_prices_test.py  variance_swaps_test.py
tests/datetime/: date_tensor_test.py  date_utils_test.py  daycounts_test.py  holiday_calendar_test.py  schedules_test.py  test_data.py
tests/experimental/: io_test.py
tests/math/: custom_loops_test.py  diff_ops_test.py  gradient_test.py  jacobian_test.py  pad_test.py  piecewise_test.py  segment_ops_test.py
tests/models/: euler_sampling_test.py  generic_ito_process_test.py  joined_ito_process_test.py  milstein_sampling_test.py  realized_volatility_test.py  utils_test.py
tests/rates/: swap_curve_test.py
tests/utils/: dataclass_test.py  shape_utils_test.py  tf_functions_test.py
tf_quant_finance/: __init__.py
tf_quant_finance/black_scholes/: asian_prices.py  brownian_bridge.py  crr_binomial_tree.py  implied_vol_approximation.py  implied_vol_newton_root.py  vanilla_prices.py  (+1 more)
(+556 files in other folders)
